Saving timestamp and accumalator values instead of snapshots